# snakebatch

./: README.md  pyproject.toml  requirements.txt
config/: config.yml  config_7T.yml  snakebids.yml
resources/bids-apps-configs/: .manifest.json.swp  manifest.json
resources/bids-apps-configs/apps/hippunfold/: hippunfold_v1.3.3.yaml  hippunfold_v1.4.1.yaml
resources/bids-apps-configs/apps/snakedwi/: snakedwi_v0.2.0-alpha.yaml
sbbatch/config/: snakebids.yml
sbbatch/resources/bids-apps-configs/apps/: app3.yaml
sbbatch/resources/bids-apps-configs/apps/hippunfold/: hippunfold_v1.3.3.yaml  hippunfold_v1.4.1.yaml
sbbatch/resources/bids-apps-configs/apps/snakedwi/: snakedwi_v0.2.0-alpha.yaml
sbbatch/workflow/: Snakefile
sbbatch/workflow/scripts/: .snakebids_runscript.py.swp
workflow/: Snakefile  common.smk  query_configs.py
workflow/scripts/: .container_runscript.py.swp  container_runscript.py  merge_zip.py  snakebids_runscript.py
