[tool.poetry]
name = "snakebatch"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
snakemake = ">=7.20,<8"
snakebids = ">=0.11.2"
pulp = "<2.8.0"
attrs = "23.2.0"


[tool.poetry.group.dev.dependencies]
snakefmt = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
