[tool.poetry]
name = "sbbatch"
version = "0.1.0"
description = "Snakebids Batch"
readme = "README.md"
license = "MIT"
authors = [
    "Ali Khan <alik@robarts.ca>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
snakemake = [
    { version=">=7.20,<8", python = "<3.11" },
    { version=">=8.1.2", python = ">=3.11" },
]
snakebids = ">=0.13.1"
pulp = { version="<2.8.0", python = "<3.11" }
pandas = [
    { version = "<=2.0.3", python = "<3.9" },
    { version = ">=2.1.1", python = ">=3.12" },
]

[tool.poetry.scripts]
sbbatch = "sbbatch.run:app.run"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
